<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#04C8C7"
    tools:context=".Main">

    <EditText
        android:id="@+id/email"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="158dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:labelFor="@+id/loginButton"
        android:text="@string/email"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/password"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:inputType="textPassword"
        android:labelFor="@+id/loginButton"
        android:text="@string/password"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="LOGIN"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_alignEnd="@+id/email"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="208dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/login"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="0dp"
        android:layout_height="13dp"
        android:layout_marginEnd="133dp"
        android:background="@android:color/transparent"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:text="@string/here"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="151dp"
        android:layout_height="14dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="184dp"
        android:layout_marginStart="18dp"
        android:text="@string/don_t_have_an_account_create"
        android:textAlignment="textStart"
        android:textColor="#fff"
        android:textSize="10sp" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="34dp"
        android:layout_height="14dp"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignTop="@+id/textView2"
        android:background="@android:color/transparent"
        android:text="HERE"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="10sp" />

</RelativeLayout>